Closed Bug 1843205 Opened 2 years ago Closed 2 years ago

Hover box remains if firefox is minimized

Categories

(Core :: Widget: Win32, defect)

Firefox 115
defect

Tracking

()

VERIFIED FIXED
117 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox-esr115 117+ verified
firefox115 --- wontfix
firefox116 --- wontfix
firefox117 --- verified
firefox118 --- verified

People

(Reporter: marcausl, Assigned: emilio)

References

(Regression)

Details

(Keywords: nightly-community, regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:109.0) Gecko/20100101 Firefox/115.0

Steps to reproduce:

Hover anyplace that opens and information box. The bookmark icon for example. Minimize firefox using window-down.

Actual results:

The info box remains on the desktop and will remain on top of any other window opened under its position.

Expected results:

Info box should close.
(Sorry - I don't know the correct terminology. When you place the mouse cursor over many places, a box appears showing additional information.)

It appears this is a firefox bug. I've opened Bug 1843205 - Hover box remains if firefox is minimized.

The Bugbug bot thinks this bug should belong to the 'Firefox::Bookmarks & History' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Bookmarks & History

Not about bookmarks and history - just used that as an example. Any hover fails this way.

Component: Bookmarks & History → Untriaged
Regressed by: 1828587
Component: Untriaged → Graphics: WebRender
Product: Firefox → Core

:emilio, since you are the author of the regressor, bug 1828587, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(emilio)

Hmm, is it the hunk that changes

mViewManagerFlushIsPending
to
(mViewManagerFlushIsPending && !mThrottled)

in nsRefreshDriver::HasObservers?

Assignee: nobody → emilio
Component: Graphics: WebRender → Widget: Win32
Flags: needinfo?(emilio)

Just like we rollup menus.

This is needed because tooltips otherwise get hidden on mousedown and
don't flush the view manager.

This matches the similar hunk for GTK in bug 1569439.

See Also: → 1843269

[Tracking Requested - why for this release]: Thunderbird115 is also affected (see Bug 1843269). So, It would be worth fixing with Firefox 115esr.

Note that this bug also affects Thunderbird whose new major release is based on

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0f31967cea44 Rollup tooltips on WM_KILLFOCUS. r=handyman
Blocks: 1843269
See Also: 1843269
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 117 Branch

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox116 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(emilio)

Reminder that this also affects thunderbird 115.

I'm not sure it's worth uplifting to 116 given it's a regression in 114 and I think the case should be rather rare (minimizing the window with keyboard while having a mouse tooltip open). But let me know if I'm missing something and this shows up more commonly?

Flags: needinfo?(emilio)
Duplicate of this bug: 1824887
Blocks: 1843203

Comment on attachment 9343686 [details]
Bug 1843205 - Rollup tooltips on WM_KILLFOCUS. r=tnikkel,cmartin,handyman

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: Affects TB 115 and firefox, can be annoying for users.
  • User impact if declined: tooltips remain on screen.
  • Fix Landed on Version: 117
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Pretty scoped change.
Attachment #9343686 - Flags: approval-mozilla-esr115?
Duplicate of this bug: 1843203

An easy workaround is setting browser.chrome.toolbar_tips.hide_on_keydown to 1.

QA Whiteboard: [qa-triaged]

Reproducible on a 2023-07-12 Nightly build on Windows 10.
Verified as fixed on Firefox 117.0b2(build ID: 20230801180159) and Nightly 118.0a1(build ID: 20230801034557) on Windows 10 and Windows 11.

Comment on attachment 9343686 [details]
Bug 1843205 - Rollup tooltips on WM_KILLFOCUS. r=tnikkel,cmartin,handyman

Approved for 115.2esr.

Attachment #9343686 - Flags: approval-mozilla-esr115? → approval-mozilla-esr115+
Duplicate of this bug: 1847577

Reproducible on a 2023-07-12 Nightly build on Windows 10.
Verified as fixed on ESR 115.2(treeherder build) on Windows 10 and Windows 11.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: