Bug 1843205 - Rollup tooltips on WM_KILLFOCUS. r=handyman

Just like we rollup menus.

This is needed because tooltips otherwise get hidden on mousedown and
don't flush the view manager.

This matches the similar hunk for GTK in bug 1569439.

Differential Revision: https://phabricator.services.mozilla.com/D183489